2012-05-26  Albert Chu <chu11@llnl.gov>

	* bmc-config/, ipmi-pef-config/, ipmi-sensors-config/,
	ipmi-chassis-config/: Fix bug in which cipher suite ID input was
	not allowed.

	* man/manpage-common-sdr-options.man: Add extra info for
	sdr-cache-file option.

	* common/toolcommon/, man/: Undo split of SDR option
	"sdr-cache-directory" into separate macro/man option.

	* common/toolcommon/, man/: Split SDR option "sdr-cache-file" and
	"sdr-cache-directory" into separate macros/man files.

	* man/manpage-common-sdr-options-heading.man,
	man/manpage-common-sdr-options-file-directory.man: New files.
	Split off from man/manpage-common-sdr-options.man.

	* man/manpage-common-sdr-cache-options-heading.man,
	man/manpage-common-sdr-cache-file-directory.man,
	man/manpage-common-sdr-cache-ignore.man: New renamed files.

	* man/: Update manpages appropriately for new files.

2012-05-26  Albert Chu <chu11@llnl.gov>

	* ipmi-pet/ipmi-pet-argp.c: Fix argp output, ipmi-pet does not
	take hostranged arguments.

	* common/toolcommon/tool-cmdline-common.h: Code cleanup.

2012-05-25  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-sensor-common.h,
	common/toolcommon/tool-sensor-common.c (valid_sensor_types):
	Remove unused parameters.

	* ipmi-sensors/, ipmi-sel/: Update for changes.

	* ipmi-pet/ipmi-pet.c (_ipmi_pet): Destroy interpret_ctx during
	cleanup.
	
2012-05-24  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-sensor-common.h,
	common/toolcommon/tool-sensor-common.c (parse_sensor_types): New
	common function.

	* ipmi-sensors/, ipmi-sel/: Use common function appropriately.

	* common/toolcommon/tool-event-common.h,
	common/toolcommon/tool-event-common.c (event_data_info): Remove
	function.

	* ipmi-sel/: Update for changes.
	
2012-05-24  Albert Chu <chu11@llnl.gov>

	* libipmimonitoring/: Support entity sensor names flags.

	* contrib/libipmimonitoring/: Update with new flags options.

	* libfreeipmi/sdr/: Support stack of saving offsets when calls to